fix scrollbar side-menu

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -10,6 +10,7 @@
 
 :root {
     --primary-color: #F7941D;
+    --secondary-color: #eb3e32;
 }
 
 html {
